functionapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2    
spec:  
  rules:  
    - host: keda-azfunc.southindia.cloudapp.azure.com
      http:
        paths:                
        - backend:
            serviceName: helloworld-http
            servicePort: 80
          path: /helloworld(/|$)(.*)
